# ten

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  WASM_BUILD_GUIDE.md  game.html  game2.html  highscores.txt  index.html  sbom-viewer.html  sbom.json  security-report.html  ten.wasm  wasm-status.html
.cargo/: config.toml  rustc
.claude/agents/: security-vulnerability-scanner.md
.github/workflows/: rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_asset_paths.rs  fuzz_highscore.rs  fuzz_icon_decode.rs
shaders/: c64_wave.frag
src/: constants.rs  game_state.rs  highscore.rs  lib.rs  main.rs  obfuscate.py  rendering.rs
src/entities/: bullet.rs  enemy.rs  explosion.rs  mod.rs  player.rs
src/systems/: collision.rs  mod.rs  wave.rs
