[package]
name = "ten"
version = "1.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.bundle]
name = "BumbleBees"
identifier = "com.mcschied.bumblebees"
icon = ["assets/icon.icns"]
resources = ["resources"]
copy = [
    { from = "resources", to = "MacOS/resources" }
]

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }
rand = { version = "0.8", features = ["small_rng"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.24", default-features = false, features = ["png"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }






