[package]
name = "ten"
version = "1.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.bundle]
name = "BumbleBees"
identifier = "com.mcschied.bumblebees"
icon = ["assets/icon.icns"]
resources = ["resources"]
copy = [
    { from = "resources", to = "MacOS/resources" }
]

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
rand = { version = "0.8", features = ["small_rng"] }






